# group4-polyfill

./: .gitmodules  CMakeLists.txt  build.sh  readme.md  shell.nix
doc/chat/: ChatGPT-TIFF-Support-in-Chromium.md
include/tiff_binary/: ccitt_g4.hpp  tiff.hpp
include/tiff_ccitt_g4/: ccitt_g4.hpp  tiff.hpp
src/: ccitt_g4.cpp
tools/: compress-jbig2.sh  generate-test-images.sh  tiff_cli.cpp
